xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__profile_permissions_selection_popup_with_disallowed_full_access.snap
---
source: tui-chatwidget/src/chatwidget/tests/permissions.rs
assertion_line: 111
expression: "render_bottom_popup(&chat, 80)"
---
  Update Model Permissions

  1. Ask for approval        Xedoc can read and edit files in the current
                             workspace, and run commands. Approval is required
                             to access the internet or edit other files.
     Full Access (disabled)  Xedoc can edit files outside this workspace and
                             access the internet without asking for approval.
                             Exercise caution when using. (disabled: Disabled
                             by requirements.)
› 2. Read Only (current)     Xedoc can read files in the current workspace.
                             Approval is required to edit files or access the
                             internet.

  Press enter to confirm or esc to go back
